--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="loader">
         <div class="loader__light">
             <div class="loader__image">
-                <img src="assets/img/logo-dark.png" alt="">
+                <img src="assets/img/logo-light.svg" alt="">
             </div>
         </div>
         <div class="loader__dark">
             <div class="loader__force-full-width">
                 <div class="loader__image loader__matrix">
-                    <img src="assets/img/logo-light.png" alt="">
+                    <img src="assets/img/logo-dark.svg" alt="">
                     <div class="loader__logo-background">
 
                     </div>
