--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Title</title>
 
     <link rel="stylesheet" href="assets/css/grid.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/animations.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.default.css">
 </head>
 <body>
     <div class="loader">
@@ -19,7 +23,9 @@
         <div class="loader__dark">
             <div class="loader__force-full-width">
                 <div class="loader__image loader__matrix">
-                    <img src="assets/img/logo-dark.svg" alt="">
+                    <img src="assets/img/logo-dark-1.svg" alt="" class="loader__logo-1">
+                    <img src="assets/img/logo-dark-2.svg" alt="" class="loader__logo-2">
+                    <img src="assets/img/logo-dark-3.svg" alt="" class="loader__logo-3">
                     <div class="loader__logo-background">
 
                     </div>
@@ -51,9 +57,36 @@
     </div>
     <div class="intro">
         <div class="container">
+            <h2>Akxis, home of creativity</h2>
             <p>
-
+                Akxis was created to create a web experience unlike any other. Starting with a clean paper and following a modern approach, we are designing the web to provide excellent customer experiences with entirely new ways of work.
+                <br><br>
+                Over the next year we'll be revealing more of our vision. We are growing rapidly and looking for potential team members, collaborators and supplier partners with the ambition to redefine existing expectations. Please contact us to learn more.
             </p>
+        </div>
+    </div>
+    <div class="companies">
+        <div class="container">
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <img src="assets/img/work/3gsn.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="assets/img/work/baksteen.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="assets/img/work/eurotruckradio.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="assets/img/work/leakshop.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="assets/img/work/new-criterium.png" alt="">
+                </div>
+                <div class="item">
+                    <img src="assets/img/work/sulphur-hosting.png" alt="">
+                </div>
+            </div>
         </div>
     </div>
     <footer>
@@ -73,6 +106,7 @@
         </div>
     </footer>
     <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script src="assets/js/owl.carousel.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
