--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="intro">
         <div class="container">
-            <h2>Akxis, home of creativity</h2>
+            <h2>Akxis, home of <span>creativity</span></h2>
             <p>
                 Akxis was created to create a web experience unlike any other. Starting with a clean paper and following a modern approach, we are designing the web to provide excellent customer experiences with entirely new ways of work.
                 <br><br>
@@ -85,6 +85,49 @@
                 </div>
                 <div class="item">
                     <img src="assets/img/work/sulphur-hosting.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="services">
+        <div class="container">
+            <h2>Still intrested? Here are some off the <span>things</span> i do</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="service-item">
+                        <div class="service-info">
+                            <h3>Design</h3>
+                            <p>Some info about the design I do, I really don't know what to put here atm. It should be this long tbh</p>
+                        </div>
+                        <i class="fa fa-paint-brush"></i>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="service-item">
+                        <div class="service-info">
+                            <h3>Development</h3>
+                            <p>Some info about the design I do, I really don't know what to put here atm. It should be this long tbh</p>
+                        </div>
+                        <i class="fa fa-cog"></i>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="service-item">
+                        <div class="service-info">
+                            <h3>SEO</h3>
+                            <p>Some info about the design I do, I really don't know what to put here atm. It should be this long tbh</p>
+                        </div>
+                        <i class="fa fa-google"></i>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="service-item">
+                        <div class="service-info">
+                            <h3>Drink Coffee</h3>
+                            <p>Some info about the design I do, I really don't know what to put here atm. It should be this long tbh</p>
+                        </div>
+                        <i class="fa fa-coffee"></i>
+                    </div>
                 </div>
             </div>
         </div>
