--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
             </div>
         </div>
     </div>
+    <div class="work">
+        <div class="container">
+            <img src="assets/img/app.png" alt="">
+        </div>
+    </div>
     <div class="services">
         <div class="container">
-            <h2>Still intrested? Here are some off the <span>things</span> i do</h2>
+            <h2>Still interested? Here are some off the <span>things</span> i do</h2>
             <div class="row">
                 <div class="col-md-3">
                     <div class="service-item">
@@ -130,6 +135,24 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="container">
+            <form action="/contact" method="POST">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label for="fullname">Full name</label>
+                        <input type="text" name="fullname" id="fullname">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+                </div>
+                <label for="message">Message</label>
+                <textarea name="message" id="message"></textarea>
+            </form>
         </div>
     </div>
     <footer>
