--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     <div class="services">
         <div class="container">
-            <h2>Still interested? Here are some off the <span>things</span> i do</h2>
+            <h2>Here are some off the <span>things</span> i love to do.</h2>
             <div class="row">
                 <div class="col-md-3">
                     <div class="service-item">
@@ -139,19 +139,27 @@
     </div>
     <div class="contact">
         <div class="container">
+            <h2>Want to get in <span>contact</span>? This is the place to be.</h2>
             <form action="/contact" method="POST">
                 <div class="row">
                     <div class="col-md-6">
                         <label for="fullname">Full name</label>
-                        <input type="text" name="fullname" id="fullname">
+                        <div class="form-input">
+                            <input type="text" name="fullname" id="fullname">
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <label for="email">Email</label>
-                        <input type="email" name="email" id="email">
+                        <div class="form-input">
+                            <input type="email" name="email" id="email">
+                        </div>
                     </div>
                 </div>
                 <label for="message">Message</label>
-                <textarea name="message" id="message"></textarea>
+                <div class="form-input">
+                    <textarea name="message" id="message"></textarea>
+                </div>
+                <button type="submit"><span>Contact me</span></button>
             </form>
         </div>
     </div>
