--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <link rel="stylesheet" href="assets/css/owl.theme.default.css">
 </head>
 <body>
+    <div class="menu">
+        <div class="menu__btn">
+            <div class="menu__line"></div>
+            <div class="menu__line"></div>
+            <div class="menu__line"></div>
+        </div>
+        <div class="menu__container">
+
+        </div>
+        <div class="menu__background">
+
+        </div>
+    </div>
     <div class="loader">
         <div class="loader__light">
             <div class="loader__image">
